apps/magesgate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magesgate-web
  namespace: magesgate-com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magesgate-web
  template:
    metadata:
      labels:
        app: magesgate-web
    spec:
      volumes:
      - name: web-content
        emptyDir: {}
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-content
          mountPath: "/usr/share/nginx/html"
          readOnly: true
        - name: nginx-config-volume
          mountPath: "/etc/nginx/conf.d/default.conf"
          subPath: default.conf
