apps/magesgate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magesgate-web
  namespace: magesgate-com
spec:
  type: ClusterIP
  selector:
    app: magesgate-web
  ports:
  - port: 80
    targetPort: 80
